# opencv_demo

./: .gitignore  CMakeLists.txt  README.md
include/: barcode_detection.h  contour_detection.h  edge_detection.h  feature_detection.h  feature_point_detection.h  filter.h  histogram.h  morphology.h  thresholding.h
src/: barcode_detection.cpp  contour_detection.cpp  edge_detection.cpp  feature_detection.cpp  feature_point_detection.cpp  filter.cpp  histogram.cpp  morphology.cpp  run.cpp  thresholding.cpp
